<resources>
    <string name="app_name">My Recipes</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="username">Username</string>
    <string name="or_login_with">Or Login with</string>
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="please_enter_your_details_below">Please enter your details below.</string>
    <string name="transparent_background">Transparent Background</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="background_spoons">Background Spoons</string>
    <string name="myrecipe_logo">MyRecipe Logo</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_e_mail_address_below_to_reset_password">Enter your e-mail address below to reset password</string>
    <string name="send">Send</string>
    <string name="wcid">210274482739-lj6dtk3vagj7ndhqo9hlvpgakahf3n38.apps.googleusercontent.com</string>
    <string name="emailAddress">E-Mail Address</string>
    <string name="facebook_app_id">464498940997795</string>
    <string name="fb_login_protocol_scheme">fb464498940997795</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="background_image">Background Image</string>
    <string name="user_bio">User Bio</string>
    <string name="lady_victoria">Lady Victoria</string>
    <string name="this_is_a_biography_that_contains_some_interesting_info">This is a biography that contains some interesting info</string>
    <string name="_124">124</string>
    <string name="recipes">Recipes</string>
</resources>
