<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/Login"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.9"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginBottom="140dp"
        android:alpha="0.9"
        android:background="@drawable/round_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/taviraj"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.106" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="309dp"
        android:layout_height="192dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        app:srcCompat="@drawable/Logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/forgotten_password"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/taviraj"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/facebookLogin"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.7"
        android:background="@drawable/facebook_button"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="2dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/googleLogin"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/google_button"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toBottomOf="@+id/facebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textSize="12sp"
        android:fontFamily="@font/taviraj"
        app:layout_constraintBottom_toTopOf="@+id/googleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="124dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:background="#D3AEAEAE"
        app:layout_constraintBottom_toTopOf="@+id/facebookLogin"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <View
        android:id="@+id/divider2"
        android:layout_width="124dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:background="#D3AEAEAE"
        app:layout_constraintBottom_toTopOf="@+id/googleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="#D3AEAEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/googleLogin"
        app:layout_constraintStart_toEndOf="@+id/facebookLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>