<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/forgotten_pass"
    tools:context=".ForgottenPassword">

    <ImageView
        android:id="@+id/transparentBgImageView"
        android:layout_width="323dp"
        android:layout_height="375dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.75"
        android:contentDescription="@string/transparent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_light" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:alpha="0.9"
        android:background="@drawable/round_button"
        android:fontFamily="@font/taviraj"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/transparentBgImageView"
        app:layout_constraintEnd_toEndOf="@+id/transparentBgImageView"
        app:layout_constraintStart_toStartOf="@+id/transparentBgImageView"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <EditText
        android:id="@+id/emailTextView"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/taviraj"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#FFA500"
        android:textColorLink="#976200"
        android:textSize="@dimen/HintTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/transparentBgImageView"
        app:layout_constraintEnd_toEndOf="@+id/transparentBgImageView"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/transparentBgImageView"
        app:layout_constraintTop_toTopOf="@+id/transparentBgImageView"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/taviraj"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/transparentBgImageView"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/transparentBgImageView"
        app:layout_constraintTop_toTopOf="@+id/transparentBgImageView" />

    <View
        android:id="@+id/divider4"
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:background="#D3AEAEAE"
        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="@+id/transparentBgImageView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/transparentBgImageView"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="202dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/taviraj"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/enter_your_e_mail_address_below_to_reset_password"
        android:textColor="#7C7B7B"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="@+id/transparentBgImageView"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/transparentBgImageView"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintVertical_bias="0.161" />

</androidx.constraintlayout.widget.ConstraintLayout>